# solune

./: .gitignore  LICENSE  README.md  azure.yaml  data-model.md  docker-compose.yml  plan.md  quickstart.md  research.md  spec.md  tasks.md
solune/backend/: .dockerignore  Dockerfile  README.md  coverage.json  pyproject.toml  pyrightconfig.json  pyrightconfig.tests.json
solune/backend/scripts/: detect_flaky.py  perf_profile_project_load.py  profile_project_load.py  run_mutmut_shard.py
solune/backend/src/: attachment_formatter.py  config.py  constants.py  dependencies.py  exceptions.py  logging_utils.py  main.py  protocols.py  utils.py
solune/backend/src/api/: __init__.py  activity.py  agents.py  apps.py  auth.py  board.py  chat.py  chores.py  cleanup.py  health.py  mcp.py  metadata.py  onboarding.py  pipelines.py  projects.py  settings.py  signal.py  tasks.py  templates.py  tools.py  webhook_models.py  webhooks.py  workflow.py
solune/backend/src/middleware/: admin_guard.py  csp.py  csrf.py  rate_limit.py  request_id.py
solune/backend/src/migrations/: 023_consolidated_schema.sql  024_apps.sql  025_performance_indexes.sql  026_done_items_cache.sql  027_pipeline_state_persistence.sql  028_queue_mode.sql  029_activity_events.sql  030_copilot_review_requests.sql  031_auto_merge_and_pipeline_states.sql  032_phase8_mcp_version.sql  033_phase8_collision_events.sql  034_phase8_recovery_log.sql  035_chat_plans.sql  036_app_template_fields.sql  037_agent_import.sql  038_reasoning_effort_columns.sql  039_user_scoped_configs.sql  040_plan_versioning.sql  041_plan_step_status.sql  042_app_plan_orchestrations.sql  043_plan_selected_pipeline.sql  044_conversations.sql  045_rainbow_theme.sql  __init__.py
solune/backend/src/models/: __init__.py  activity.py  agent.py  agent_creator.py  agents.py  app.py  app_template.py  board.py  build_progress.py  chat.py  chores.py  cleanup.py  guard.py  mcp.py  pagination.py  pipeline.py  pipeline_events.py  pipeline_run.py  pipeline_stage_state.py  plan.py  project.py  recommendation.py  settings.py  signal.py  stage_group.py  task.py  tools.py  user.py  workflow.py
solune/backend/src/prompts/: agent_instructions.py  issue_generation.py  label_classification.py  plan_instructions.py  task_generation.py  transcript_analysis.py
solune/backend/src/services/: activity_logger.py  activity_service.py  agent_creator.py  agent_middleware.py  agent_provider.py  agent_tools.py  agent_tracking.py  ai_agent.py  ai_utilities.py  alert_dispatcher.py  app_plan_orchestrator.py  app_service.py  bootstrap.py  cache.py  chat_agent.py  chat_state_manager.py  chat_store.py  cleanup_service.py  collision_resolver.py  completion_providers.py  database.py  done_items_store.py  encryption.py  fleet_dispatch.py  github_auth.py  github_commit_workflow.py  guard_service.py  label_classifier.py  mcp_store.py  metadata_service.py  model_fetcher.py  otel_setup.py  pagination.py  pipeline_estimate.py  pipeline_launcher.py  pipeline_orchestrator.py  pipeline_state_store.py  plan_agent_provider.py  plan_issue_service.py  plan_parser.py  (+12 more)
solune/backend/src/startup/: __init__.py  protocol.py  runner.py
solune/backend/templates/: .gitignore
solune/backend/tests/: conftest.py  fleet_dispatch_harness.py  test_api_e2e.py
solune/backend/tests/architecture/: test_ble001_canary.py  test_import_rules.py
solune/backend/tests/chaos/: test_background_loops.py  test_concurrent_state_updates.py  test_connection_pool_exhaustion.py  test_fault_injection.py  test_signal_message_loss.py
solune/backend/tests/concurrency/: conftest.py  test_interleaving.py  test_polling_races.py  test_transaction_safety.py  test_websocket_reconnection.py
solune/backend/tests/e2e/: conftest.py  test_auth_flow.py  test_board_flow.py  test_chat_flow.py  test_pipeline_flow.py  test_projects_flow.py
solune/backend/tests/fuzz/: test_api_input_fuzz.py  test_markdown_fuzz.py  test_webhook_fuzz.py
solune/backend/tests/helpers/: __init__.py  assertions.py  factories.py
solune/backend/tests/integration/: conftest.py  test_auth_callback.py  test_chat_confirm.py  test_custom_agent_assignment.py  test_fleet_app_dispatch.py  test_fleet_dispatch_smoke.py  test_full_workflow.py  test_health_endpoint.py  test_migrations.py  test_pipeline_launch.py  test_pipeline_lifecycle.py  test_production_mode.py  test_queue_mode.py  test_runtime_validation.py  test_thin_mock_flows.py  test_webhook_dispatch.py  test_webhook_verification.py
solune/backend/tests/performance/: test_board_load_time.py
solune/backend/tests/property/: conftest.py  test_blocking_queue.py  test_bounded_cache_stateful.py  test_markdown_parser_roundtrips.py  test_model_roundtrips.py  test_model_validation.py  test_pipeline_state_machine.py  test_pipeline_states.py
solune/backend/tests/unit/: test_activity_logger.py  (+207 more)
(+1626 files in other folders)
